docker-app/k8s/devopsALBIngress_query2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: "devops-alb"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0e0d0ad308d6544c0, subnet-0ffabce13bc376695, subnet-0cd7e1b99f90a176c
    alb.ingress.kubernetes.io/security-groups: sg-09321ec3dc5878690
    alb.ingress.kubernetes.io/conditions.devops-svc-alb-green: '[{"Field":"query-string","QueryStringConfig":{"Values":[{"Key":"group","Value":"green"}]}}]'
    alb.ingress.kubernetes.io/conditions.forward-multiple-tg: '[{"Field":"query-string","QueryStringConfig":{"Values":[{"Key":"group","Value":"blue"}]}}]'
    alb.ingress.kubernetes.io/actions.forward-multiple-tg: '{"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"devops-svc-alb-blue","ServicePort":"80","Weight":90},{"ServiceName":"devops-svc-alb-green","ServicePort":"8080","Weight":10}]}}'

  labels:
    app: devops-ingress
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: devops-svc-alb-green
            servicePort: 8080
        - backend:
            serviceName: forward-multiple-tg
            servicePort: use-annotation
        - path: /*
          backend:
            serviceName: devops-svc-alb-blue
            servicePort: 80
